# 4DGS

./: README.md  merge_many_4dgs.py  pyproject.toml  train.py
arguments/: __init__.py
gaussian_renderer/: __init__.py
scene/: deformation.py  gaussian_model.py
