[project]
name = "4dgs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "imageio[ffmpeg]>=2.37.0",
    "lpips>=0.1.4",
    "matplotlib>=3.10.3",
    "mmcv>=2.2.0",
    "open3d>=0.19.0",
    "opencv-python>=4.12.0.88",
    "plyfile>=1.1.2",
    "pytorch-msssim>=1.0.0",
]
